added new services

--- a/about.html
+++ b/about.html
@@ -85,13 +85,25 @@
                                                     <a href="retirement-saving.html">Retirement Planning</a>
                                                 </li>                                                
                                                 <li>
-                                                    <a href="taxation.html">Taxation</a>
+                                                    <a href="life-insurance.html">Life Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="health-insurance.html">Health Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="home-insurance.html">Home Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="motor-insurance.html">Motor Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="com-property.html">Commercial Property Insurance</a>
                                                 </li>                                               
                                                 <li>
                                                     <a href="bonds.html">Bonds</a>
                                                 </li>                                                
                                                 <li>
-                                                    <a href="pms-aif.html">PMS / AIF</a>
+                                                    <a href="pms-aif.html">PMS</a>
                                                 </li>                                                 
                                             </ul>
                                         </li>                                                            
@@ -140,13 +152,25 @@
                           <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
                         </li>
                         <li class="nav__item">
-                          <a class="nav__link" href="taxation.html">Taxation</a>
+                          <a class="nav__link" href="life-insurance.html">Life Insurance</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="health-insurance.html">Health Insurance</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="home-insurance.html">Home Insurance</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="motor-insurance.html">Motor Insurance</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="com-property.html">Commercial Property Insurance</a>
                         </li>
                         <li class="nav__item">
                           <a class="nav__link" href="bonds.html">Corporate Bonds</a>
                         </li>
                         <li class="nav__item">
-                          <a class="nav__link" href="pms-aif.html">PMS / AIF</a>
+                          <a class="nav__link" href="pms-aif.html">PMS</a>
                         </li>
                     </ul>
                 </a>
@@ -166,7 +190,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="bread-bg">
-                        <img src="images/about_banner.avif" alt="" style="width: 100%;">
+                        <img src="images/about-img.jpg" alt="" style="width: 100%;">
                     </div>
                 </div>
             </div>
@@ -191,8 +215,10 @@
                 </div>
             </div>
             <div class="row mt-90">
-                <div class="col-lg-3"></div>
-                <div class="col-lg-9">
+                <div class="col-lg-3">
+                    <img src="images/gayatree-lohiya.jpeg" alt="">
+                </div>
+                <div class="col-lg-9 pt-3">
                     <p>
                         Gayatree A. Lohiya is an accomplished professional with a remarkable track record in the financial sector spanning nearly eight years. She possesses a strong educational background with an M.Com and B.Ed, coupled with extensive practical experience. Gayatree is an expert in managing a substantial wealth portfolio worth Rs 50 million and catering to the financial needs of over 150 satisfied clients. As an experienced financial consultant, Gayatree specializes in a wide range of financial instruments, including Portfolio Management Services (PMS) investments, Life Insurance, Health Insurance, Mutual Funds (SIP), Home Loans, National Pension System (NPS), Bonds, and Loans secured against Mutual Funds, among others.
                     </p>
@@ -326,31 +352,6 @@
 
     <!-- counter section -->
 
-    <div class="counter-area bg-cover">
-        <div class="overlay-2"></div>
-        <div class="container header-container">
-            <div class="row"  id="counter-about">
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-counter-box">
-                        <p class="count counter-number" data-count="150">0</p>
-                        <h6>Cases Completed</h6>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-counter-box">
-                        <p class="count counter-number" data-count="19">0</p>
-                        <h6>Consultants</h6>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-counter-box">
-                        <p class="count counter-number" data-count="130">0</p>
-                        <h6>Award Won</h6>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     
 
     <!-- contact section -->
@@ -390,23 +391,34 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-xl-1 col-xl-5 col-lg-5 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
+                <div class="offset-xl-1 col-xl-6 col-lg-6 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                      <div class="footer-widget">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <div class="services-list">
                                     <h5>Our Services</h5>
                                     <ul>
                                         <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
                                         <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
                                         <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="taxation.html">Taxation</a></li>
+                                        
                                         <li><i class="fa-solid fa-check-circle"></i><a href="bonds.html">Bonds</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS / AIF</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS</a></li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-4">
+                                <div class="services-list mt-5">
+                                    <ul class="pt-4">
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Life Insurance</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="health-insurance.html">Health Insurance</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Home Insurance</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="motor-insurance.html">Motor Insurance</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="com-property.html">Commercial Insurance</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
                                 <div class="footer-contact-info">
                                     <h5>Contact Us</h5>
                                     <p class="address">FWR2+C39, Sacred Mall , Wanowrie, Pune, Maharashtra 411040</p>
