--- a/child-future-saving.html
+++ b/child-future-saving.html
@@ -85,16 +85,28 @@
                                                     <a href="retirement-saving.html">Retirement Planning</a>
                                                 </li>                                                
                                                 <li>
-                                                    <a href="taxation.html">Taxation</a>
+                                                    <a href="life-insurance.html">Life Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="health-insurance.html">Health Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="home-insurance.html">Home Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="motor-insurance.html">Motor Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="com-property.html">Commercial Property Insurance</a>
                                                 </li>                                               
                                                 <li>
                                                     <a href="bonds.html">Bonds</a>
                                                 </li>                                                
                                                 <li>
-                                                    <a href="pms-aif.html">PMS / AIF</a>
+                                                    <a href="pms-aif.html">PMS</a>
                                                 </li>                                                 
                                             </ul>
-                                        </li>                                                            
+                                        </li>                                                              
                                         <li class="nav-item">
                                             <a class="nav-link" href="calculators.html">Financial Calculators</a>
                                         </li>
@@ -140,13 +152,25 @@
                               <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="taxation.html">Taxation</a>
+                              <a class="nav__link" href="life-insurance.html">Life Insurance</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="health-insurance.html">Health Insurance</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="home-insurance.html">Home Insurance</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="motor-insurance.html">Motor Insurance</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="com-property.html">Commercial Property Insurance</a>
                             </li>
                             <li class="nav__item">
                               <a class="nav__link" href="bonds.html">Corporate Bonds</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="pms-aif.html">PMS / AIF</a>
+                              <a class="nav__link" href="pms-aif.html">PMS</a>
                             </li>
                         </ul>
                     </a>
@@ -176,7 +200,7 @@
             <div class="row mt-90">
                 <div class="col-12">
                     <div class="bread-bg">
-                        <img src="images/slide-2.jpg" alt="">
+                        <img src="images/child-future.jpg" alt="">
                         <div class="bg-tag">
                             <h2>Child Future Saving</h2>
                         </div>
@@ -240,33 +264,44 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-xl-1 col-xl-5 col-lg-5 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
-                     <div class="footer-widget">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="services-list">
-                                    <h5>Our Services</h5>
-                                    <ul>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="taxation.html">Taxation</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="bonds.html">Bonds</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS / AIF</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="footer-contact-info">
-                                    <h5>Contact Us</h5>
-                                    <p class="address">FWR2+C39, Sacred Mall , Wanowrie, Pune, Maharashtra 411040</p>
-                                    <p class="number">+91 9890655909 / +91 9922255681</p>
-                                    <p class="email">futuremaipaisa@gmail.com</p>
-                                </div>
-                            </div>
-                        </div>
-                     </div>   
-                </div>
+                <div class="offset-xl-1 col-xl-6 col-lg-6 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
+                    <div class="footer-widget">
+                       <div class="row">
+                           <div class="col-md-4">
+                               <div class="services-list">
+                                   <h5>Our Services</h5>
+                                   <ul>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
+                                       
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="bonds.html">Bonds</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS</a></li>
+                                   </ul>
+                               </div>
+                           </div>
+                           <div class="col-md-4">
+                               <div class="services-list mt-5">
+                                   <ul class="pt-4">
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Life Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="health-insurance.html">Health Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Home Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="motor-insurance.html">Motor Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="com-property.html">Commercial Insurance</a></li>
+                                   </ul>
+                               </div>
+                           </div>
+                           <div class="col-md-4">
+                               <div class="footer-contact-info">
+                                   <h5>Contact Us</h5>
+                                   <p class="address">FWR2+C39, Sacred Mall , Wanowrie, Pune, Maharashtra 411040</p>
+                                   <p class="number">+91 9890655909 / +91 9922255681</p>
+                                   <p class="email">futuremaipaisa@gmail.com</p>
+                               </div>
+                           </div>
+                       </div>
+                    </div>   
+               </div>
                 <!-- <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
                     <div class="footer-widget">
                         <div class="project-gallery">
