--- a/index.html
+++ b/index.html
@@ -104,16 +104,28 @@
                                                     <a href="retirement-saving.html">Retirement Planning</a>
                                                 </li>                                                
                                                 <li>
-                                                    <a href="taxation.html">Taxation</a>
+                                                    <a href="life-insurance.html">Life Insurance</a>
                                                 </li>                                               
                                                 <li>
-                                                    <a href="bonds.html">Corporate Bonds</a>
+                                                    <a href="health-insurance.html">Health Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="home-insurance.html">Home Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="motor-insurance.html">Motor Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="com-property.html">Commercial Property Insurance</a>
+                                                </li>                                               
+                                                <li>
+                                                    <a href="bonds.html">Bonds</a>
                                                 </li>                                                
                                                 <li>
-                                                    <a href="pms-aif.html">PMS / AIF</a>
+                                                    <a href="pms-aif.html">PMS</a>
                                                 </li>                                                 
                                             </ul>
-                                        </li>                                                            
+                                        </li>                                                              
                                         <li class="nav-item">
                                             <a class="nav-link" href="calculators.html">Financial Calculators</a>
                                         </li>
@@ -160,13 +172,25 @@
                           <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
                         </li>
                         <li class="nav__item">
-                          <a class="nav__link" href="taxation.html">Taxation</a>
+                          <a class="nav__link" href="life-insurance.html">Life Insurance</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="health-insurance.html">Health Insurance</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="home-insurance.html">Home Insurance</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="motor-insurance.html">Motor Insurance</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="com-property.html">Commercial Property Insurance</a>
                         </li>
                         <li class="nav__item">
                           <a class="nav__link" href="bonds.html">Corporate Bonds</a>
                         </li>
                         <li class="nav__item">
-                          <a class="nav__link" href="pms-aif.html">PMS / AIF</a>
+                          <a class="nav__link" href="pms-aif.html">PMS</a>
                         </li>
                     </ul>
                 </a>
@@ -182,8 +206,8 @@
     <div class="hero-area light-bg-2">
         <div class="container header-container">
             <div class="hero-area-content wow fadeInUp animated" data-wow-delay="200ms" style="animation-delay: 200ms; visibility: visible; animation-name: fadeInUp;">            
-                <h3>Your Trusted Finance Advisor.</h3>
-                <h1>Trustworthy Finance <br>Advice</h1>            
+                <h3>Your Trusted Financial Advisor.</h3>
+                <h1>Trustworthy Financial <br>Advisor</h1>            
                 <p>
                     Welcome to Money Maa, where financial empowerment meets personalized guidance. We understand that your financial journey is unique, and at Money Maa, we are dedicated to providing tailored solutions to help you achieve your goals.<a href="about.html">Discover More</a> </p>                    
             </div>
@@ -285,9 +309,9 @@
                 <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="single-service-wrap">
                         <div class="single-service-inner">
-                            <h5><a href="child-future-saving.html">Financial Planning</a></h5>
-                            <p>We'll help you make sensible decisions about money that can help you achieve your goals in life.</p>
-                            <a href="child-future-saving.html" class="details-link"><i class="fa-solid fa-arrow-right"></i></a>
+                            <h5><a href="health-insurance.html">Health Insurance</a></h5>
+                            <p>In the pursuit of a fulfilling life, one's well-being stands as a cornerstone, and at Money Maa, we recognize the significance of safeguarding your health.</p>
+                            <a href="health-insurance.html" class="details-link"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                         <div class="single-service-inner">
                             <h5><a href="retirement-saving.html">Retirement Planning</a></h5>
@@ -295,9 +319,9 @@
                             <a href="retirement-saving.html" class="details-link"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                         <div class="single-service-inner">
-                            <h5><a href="taxation.html">Taxation</a></h5>
-                            <p>Tax planning considers the tax implications of business decisions, usually with the goal of minimizing tax liability.</p>
-                            <a href="taxation.html" class="details-link"><i class="fa-solid fa-arrow-right"></i></a>
+                            <h5><a href="life-insurance.html">Life Insurance</a></h5>
+                            <p>Life insurance is a vital financial tool that provides a financial safety net for individuals and their families in the face of unexpected events.</p>
+                            <a href="life-insurance.html" class="details-link"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                         <div class="single-service-inner">
                             <h5><a href="mutual-funds.html">Mutual Funds</a></h5>
@@ -327,31 +351,6 @@
 
     <!-- counter section -->
 
-    <div class="counter-area bg-cover">
-        <div class="overlay-2"></div>
-        <div class="container header-container">
-            <div class="row"  id="counter-about">
-                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-                    <div class="single-counter-box">
-                        <p class="count counter-number" data-count="150">0</p>
-                        <h6>Cases Completed</h6>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-                    <div class="single-counter-box">
-                        <p class="count counter-number" data-count="19">0</p>
-                        <h6>Consultants</h6>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-                    <div class="single-counter-box">
-                        <p class="count counter-number" data-count="130">0</p>
-                        <h6>Award Won</h6>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- about section  -->
 
@@ -378,7 +377,7 @@
                             <ul>
                                 <li><i class="fa-solid fa-check"></i> Best Financial Planning Service</li>
                                 <li><i class="fa-solid fa-check"></i>Business Strategy &amp; Growth</li>
-                                <li><i class="fa-solid fa-check"></i>Highly Dedicated Worker</li>
+                                <li><i class="fa-solid fa-check"></i>Highly Dedicated Team  </li>
                                 <li><i class="fa-solid fa-check"></i>99.9% Customer Satisfaction</li>
                                 
                             </ul>
@@ -480,6 +479,15 @@
                                     <p>Store Manager at A.B. Group</p>
                                 </div>
                               </div>
+                              <div class="swiper-slide single-testimonial-author d-flex align-items-center">
+                                <div class="testimonial-thumb">
+                                    <img src="images/kunal-sarda.jpg" />
+                                </div>
+                                <div class="testimonial-content">
+                                    <h6>Kunal Sarda</h6>
+                                    <p>Cluster Manager</p>
+                                </div>
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -534,6 +542,26 @@
                                         <h6>Shraddha Karwa</h6>
                                         <p class="designation">Store manager at A.B. Group</p>
                                         <p>I am incredibly impressed by Money Maa financial planner and investment services. Their innovative approach and personalized strategies have transformed my financial outlook. Their dedication to client success and cutting-edge solutions make them a standout choice for anyone navigating the complexities of investment planning.</p>
+                                        <div class="testimonal-review-wrap">
+                                            <i class="fa-solid fa-star" style="color: #ffb966;"></i>
+                                            <i class="fa-solid fa-star" style="color: #ffb966;"></i>
+                                            <i class="fa-solid fa-star" style="color: #ffb966;"></i>
+                                            <i class="fa-solid fa-star" style="color: #ffb966;"></i>
+                                            <i class="fa-solid fa-star" style="color: #ffb966;"></i>
+                                            <span>5.0</span>
+                                        </div>
+                                    </div>
+                                </div>
+                              </div>
+                              <div class="swiper-slide">
+                                <div class="testimonial-slide-inner">
+                                    <div class="testimonal-thumb">
+                                        <img src="images/kunal-sarda2.png" alt="client-1">
+                                    </div>
+                                    <div class="testimonal-slider-content">
+                                        <h6>Kunal Sarda</h6>
+                                        <p class="designation">Cluster Manager, Bajaj Finserv</p>
+                                        <p>The team has done a commendable job in helping my family and me identify and plan investments with HIp , SIP and TIP option. Their choice of funds and the specific schemes proved to be very apt for first time investors like me.</p>
                                         <div class="testimonal-review-wrap">
                                             <i class="fa-solid fa-star" style="color: #ffb966;"></i>
                                             <i class="fa-solid fa-star" style="color: #ffb966;"></i>
@@ -604,33 +632,44 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-xl-1 col-xl-5 col-lg-5 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
-                     <div class="footer-widget">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="services-list">
-                                    <h5>Our Services</h5>
-                                    <ul>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="taxation.html">Taxation</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="bonds.html">Bonds</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS / AIF</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="footer-contact-info">
-                                    <h5>Contact Us</h5>
-                                    <p class="address">FWR2+C39, Sacred Mall , Wanowrie, Pune, Maharashtra 411040</p>
-                                    <p class="number">+91 9890655909 / +91 9922255681</p>
-                                    <p class="email">futuremaipaisa@gmail.com</p>
-                                </div>
-                            </div>
-                        </div>
-                     </div>   
-                </div>
+                <div class="offset-xl-1 col-xl-6 col-lg-6 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
+                    <div class="footer-widget">
+                       <div class="row">
+                           <div class="col-md-4">
+                               <div class="services-list">
+                                   <h5>Our Services</h5>
+                                   <ul>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
+                                       
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="bonds.html">Bonds</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS</a></li>
+                                   </ul>
+                               </div>
+                           </div>
+                           <div class="col-md-4">
+                               <div class="services-list mt-5">
+                                   <ul class="pt-4">
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Life Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="health-insurance.html">Health Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Home Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="motor-insurance.html">Motor Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="com-property.html">Commercial Insurance</a></li>
+                                   </ul>
+                               </div>
+                           </div>
+                           <div class="col-md-4">
+                               <div class="footer-contact-info">
+                                   <h5>Contact Us</h5>
+                                   <p class="address">FWR2+C39, Sacred Mall , Wanowrie, Pune, Maharashtra 411040</p>
+                                   <p class="number">+91 9890655909 / +91 9922255681</p>
+                                   <p class="email">futuremaipaisa@gmail.com</p>
+                               </div>
+                           </div>
+                       </div>
+                    </div>   
+               </div>
                 <!-- <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
                     <div class="footer-widget">
                         <div class="project-gallery">
