--- a/about.html
+++ b/about.html
@@ -408,8 +408,8 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="services-list mt-5">
-                                    <ul class="pt-4">
+                                <div class="services-list mt-5 service-list2">
+                                    <ul class="pt-4 service2-ul">
                                         <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Life Insurance</a></li>
                                         <li><i class="fa-solid fa-check-circle"></i><a href="health-insurance.html">Health Insurance</a></li>
                                         <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Home Insurance</a></li>
