--- a/motor-insurance.html
+++ b/motor-insurance.html
@@ -342,8 +342,8 @@
                   </div>
                   <div class="footer-navbar">
                       <ul>
+                        <li><a href="index.html">Home</a></li> 
                           <li><a href="about.html">About Us</a></li> 
-                          <li><a href="mutual-funds.html">Services</a></li> 
                           <li><a href="calculators.html">Financial Calculators</a></li> 
                           <li><a href="contact.html">Contact Us</a></li>
                       </ul>
